Maint:Correct error with answers not showing in gold

--- a/css/style.css
+++ b/css/style.css
@@ -1514,11 +1514,13 @@ body {
     }
 }
 
-#game-board .row div:hover {
+/* ================================================================ Game Board Answers City-Nights ================================================================= */
+
+#game-board-city-lights .row div:hover {
 	cursor: pointer;
 }
 
-#game-board .row div.answer {
+#game-board-city-lights .row div.answer {
 	border: 0.2rem solid #fff;
     border-radius: 2rem;
     padding: 0.4em;
@@ -1533,7 +1535,77 @@ body {
 
 @media (min-width:320px) and (max-width:414px){
 
-    #game-board .row div.answer {
+    #game-board-city-lights .row div.answer {
+        border: 0.1rem solid #fff;
+        border-radius: 1rem;
+        padding: 0.2em;
+        box-shadow: 
+            0 0 .1rem #f7ef8a,
+            0 0 .1rem #f7ef8a,
+            0 0 1rem #ae8625,
+            0 0 0.4rem #ae8625,
+            0 0 0.9rem #ae8625,
+            inset 0 0 0.5rem #ae8625;
+    }
+}
+
+/* ================================================================ Game Board Answers Jungle ================================================================= */
+
+#game-board-jungle .row div:hover {
+	cursor: pointer;
+}
+
+#game-board-jungle .row div.answer {
+	border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    padding: 0.4em;
+    box-shadow: 
+        0 0 .2rem #f7ef8a,
+        0 0 .2rem #f7ef8a,
+        0 0 2rem #ae8625,
+        0 0 0.8rem #ae8625,
+        0 0 1.8rem #ae8625,
+        inset 0 0 1rem #ae8625;
+}
+
+@media (min-width:320px) and (max-width:414px){
+
+    #game-board-jungle .row div.answer {
+        border: 0.1rem solid #fff;
+        border-radius: 1rem;
+        padding: 0.2em;
+        box-shadow: 
+            0 0 .1rem #f7ef8a,
+            0 0 .1rem #f7ef8a,
+            0 0 1rem #ae8625,
+            0 0 0.4rem #ae8625,
+            0 0 0.9rem #ae8625,
+            inset 0 0 0.5rem #ae8625;
+    }
+}
+
+/* ================================================================ Game Board Answers Mars-Attacks ================================================================= */
+
+#game-board-mars-attacks .row div:hover {
+	cursor: pointer;
+}
+
+#game-board-mars-attacks .row div.answer {
+	border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    padding: 0.4em;
+    box-shadow: 
+        0 0 .2rem #f7ef8a,
+        0 0 .2rem #f7ef8a,
+        0 0 2rem #ae8625,
+        0 0 0.8rem #ae8625,
+        0 0 1.8rem #ae8625,
+        inset 0 0 1rem #ae8625;
+}
+
+@media (min-width:320px) and (max-width:414px){
+
+    #game-board-mars-attacks .row div.answer {
         border: 0.1rem solid #fff;
         border-radius: 1rem;
         padding: 0.2em;
